--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
             <i class="loader --1"></i>
             <p>AR mode initiation...</p>
         </div>
-        <model-viewer src="./assets/clown.glb" ios-src="./assets/clown-ios.usdz"
+        <model-viewer src="./assets/clown_scaled.glb" 
             autoplay ar-scale="auto" camera-controls ar auto-rotate>
 
         </model-viewer>
